chore: update Spring framework dependencies and replace ObjectMapper with JsonMapper